Fixed image overlap

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -160,10 +160,10 @@ h2 {
 }
 
 .card-image {
-  border-radius: 0.1rem;
-  display: block;
-  margin: 1rem;
+  border-radius: 0.2rem;
   width: 100%;
+  display: block;
+  margin: 1rem 0rem;
 }
 
 .center-items {
