--- a/client/src/components/tableComponent/index.scss
+++ b/client/src/components/tableComponent/index.scss
@@ -1,3 +1,4 @@
+@import "../../App.scss";
 $chart-background: white;
 $bar-colors: #2196f3, #e91e63, #9c27b0, #4caf50, #ff9800, #607d8b;
 $bar-heights: 17rem, 17rem, 22rem, 22rem, 25rem, 25rem;
@@ -6,8 +7,8 @@ $bar-heights: 17rem, 17rem, 22rem, 22rem, 25rem, 25rem;
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   background-color: $chart-background;
   border-left: 4px solid black;
   border-bottom: 4px solid black;
