--- a/client/src/scenes/Public/statisticsPage/index.scss
+++ b/client/src/scenes/Public/statisticsPage/index.scss
@@ -1,9 +1,1 @@
 @import "../../../App.scss";
-
-.card-image {
-  width: 30rem;
-}
-
-.container-statistics {
-  @include container(40rem);
-}
